Bugfix/alt cmake boost (#2)
* moving the cmake fetch to the dep

* fixed not properly parsing the inner dep cmake folders, removed old find_package call

* updated boost deps call

* adding boost/gtest deps lower level

* removed some debug messages

* refactored boost to be a parent dependency

* new cmake download system for boost

* update cmake with missing boost dep libs

* updated envvar header for macos

* update cmake process and fixed compiler mistake on source file

* updated linking

* fixed cmake to link fat libs on macos for newer chip types (m1/m2)

* updated for more deps

* some updates for better linking in windows targets

* alternative cmake boost install process that works better in windows env

* updated submodule

* update submodule

* update submodule and cleanup cmake

* update submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,6 @@
 [submodule "Source/PlugSync/shared/message_protocol_external_mixer"]
 	path = Source/PlugSync/shared/message_protocol_external_mixer
 	url = ssh://git@git.jetbrains.space/gpu-audio/mach-1/message_protocol_external_mixer.git
+[submodule "cmake/boost-cmake"]
+	path = cmake/boost-cmake
+	url = git@github.com:himwho/boost-cmake.git
