fixes context issues from conversion of old to new murka

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -12,6 +12,7 @@ target_sources(${PLUGIN_NAME} PRIVATE    Config.h
                                     RingBuffer.h
                                     WindowUtil.h
                                     WindowUtil.cpp
+                                    UI/M1Label.h
                                     UI/M1Checkbox.h
                                     UI/M1DropdownButton.h
                                     UI/M1DropdownMenu.h
