renamed bundle id

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ set(RBRACKET_LITERAL "}")
 
 # DYNAMIC_IO_PLUGIN_MODE or STREAMING_PANNER_PLUGIN or AAX/RTAS
 set(PLUGIN_NAME "${CMAKE_PROJECT_NAME}")
-set(CUSTOM_BUNDLE_ID "com.mach1.panner")
+set(CUSTOM_BUNDLE_ID "com.mach1.spatial.panner")
 set(CUSTOM_PLUGIN_CODE "M1PN")
 
 if(ITD_PARAMETERS)
