--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,11 @@ if(APPLE)
     set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64" CACHE STRING "Architectures" FORCE)
     set(CMAKE_XCODE_ATTRIBUTE_MACOSX_DEPLOYMENT_TARGET[arch=arm64] "11.0" CACHE STRING "arm 64 minimum deployment target" FORCE)
 endif()# IDEs:  Enable grouping of source files into folders in IDEs.
-if(WIN32 OR MSVC OR MINGW)
-    set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} /FS")
-    set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} /FS")
+if(WIN32 OR MSVC OR MINGW OR CMAKE_COMPILER_IS_MSVC)
+    if(CMAKE_GENERATOR EQUALS "Ninja")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /FS")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /FS")
+    endif()
 endif()
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 # IDEs:  Create a folder in the IDE with the JUCE Module code.
