--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,8 @@ if(APPLE)
 endif()# IDEs:  Enable grouping of source files into folders in IDEs.
 if(WIN32 OR MSVC OR MINGW OR CMAKE_COMPILER_IS_MSVC)
     if(CMAKE_GENERATOR STREQUAL "Ninja")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /FS")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /FS")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /FS -j1")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /FS -j1")
     endif()
 endif()
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
