init for new memoryshare class with test script
control data works, audio data WIP

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -12,6 +12,8 @@ target_sources(${PLUGIN_NAME} PRIVATE    Config.h
                                     RingBuffer.h
                                     WindowUtil.h
                                     WindowUtil.cpp
+                                    M1MemoryShare.h
+                                    M1MemoryShare.cpp
                                     UI/M1Label.h
                                     UI/M1Checkbox.h
                                     UI/M1DropdownButton.h
