--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,10 @@
 [submodule "Modules/juce_murka"]
 	path = Modules/juce_murka
-	url = git@github.com:Kiberchaika/juce_murka.git
+	url = https://github.com/Kiberchaika/juce_murka.git
 	branch = 1_0
 [submodule "Modules/m1-sdk"]
 	path = Modules/m1-sdk
-	url = git@github.com:Mach1Studios/m1-sdk.git
+	url = https://github.com/Mach1Studios/m1-sdk.git
 [submodule "JUCE"]
 	path = JUCE
-	url = git@github.com:juce-framework/JUCE.git
+	url = https://github.com/juce-framework/JUCE.git
